; ModuleID = '/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_populate_sglist.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/crypto/ccp/extr_ccp.c_ccp_populate_sglist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sglist = type { i32 }
%struct.cryptop = type { i32, i32, i32, i32, i32 }

@CRYPTO_F_IMBUF = common dso_local global i32 0, align 4
@CRYPTO_F_IOV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sglist*, %struct.cryptop*)* @ccp_populate_sglist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ccp_populate_sglist(%struct.sglist* %0, %struct.cryptop* %1) #0 {
  %3 = alloca %struct.sglist*, align 8
  %4 = alloca %struct.cryptop*, align 8
  %5 = alloca i32, align 4
  store %struct.sglist* %0, %struct.sglist** %3, align 8
  store %struct.cryptop* %1, %struct.cryptop** %4, align 8
  %6 = load %struct.sglist*, %struct.sglist** %3, align 8
  %7 = call i32 @sglist_reset(%struct.sglist* %6)
  %8 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %9 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @CRYPTO_F_IMBUF, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load %struct.sglist*, %struct.sglist** %3, align 8
  %16 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %17 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %16, i32 0, i32 4
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @sglist_append_mbuf(%struct.sglist* %15, i32 %18)
  store i32 %19, i32* %5, align 4
  br label %43

20:                                               ; preds = %2
  %21 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %22 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @CRYPTO_F_IOV, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %20
  %28 = load %struct.sglist*, %struct.sglist** %3, align 8
  %29 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %30 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @sglist_append_uio(%struct.sglist* %28, i32 %31)
  store i32 %32, i32* %5, align 4
  br label %42

33:                                               ; preds = %20
  %34 = load %struct.sglist*, %struct.sglist** %3, align 8
  %35 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %36 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.cryptop*, %struct.cryptop** %4, align 8
  %39 = getelementptr inbounds %struct.cryptop, %struct.cryptop* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @sglist_append(%struct.sglist* %34, i32 %37, i32 %40)
  store i32 %41, i32* %5, align 4
  br label %42

42:                                               ; preds = %33, %27
  br label %43

43:                                               ; preds = %42, %14
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @sglist_reset(%struct.sglist*) #1

declare dso_local i32 @sglist_append_mbuf(%struct.sglist*, i32) #1

declare dso_local i32 @sglist_append_uio(%struct.sglist*, i32) #1

declare dso_local i32 @sglist_append(%struct.sglist*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
